Added error type checking, added session expiry check, updated tests
- Added error type checking
- Renamed result to sess (represents a session)
- Renamed resultJSON to sessJSON
- Used error types in test cases where required
- Added test for expired sessions
- Added expiry check in the cache
- Created errors package 
- Added new field for Sessions, lastAccessed
- Updated swagger spec with new GET method
