# swagger.yaml
@@ -37,6 +37,29 @@ paths:
           description: Bad Request
         500:
           description: Internal Server Error
+  /session/{ID}:
+    get:
+      tags:
+        - session
+      summary: Get a session by ID endpoint
+      description: Gets an existing session by the provided ID.
+      parameters:
+        - in: path
+          name: ID
+          type: string
+          required: true
+          description: ID of stored session
+      produces:
+        - application/json
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: "#/definitions/Session"
+        404:
+          description: Not Found
+        500:
+          description: Internal Server Error
 
 definitions:
   NewSessionRequest:
@@ -55,5 +78,8 @@ definitions:
         type: string
         example: user@email.com
       start:
+        type: string
+        example: "2006-01-02T15:04:05.000Z"
+      lastAccessed:
         type: string
         example: "2006-01-02T15:04:05.000Z"
